--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,6 +1,9 @@
 .company {
     padding-top: 94px;
     padding-bottom: 94px;
+    @media screen and (max-width: 767px) {
+            display: none;
+        }
 }
 
 .company__title {
@@ -16,30 +19,46 @@
 }
 
 .company .container {
-    width: 1200px;
+   
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
+        @media screen and(min-width:480px) {
+                width: 480px;
+            }
+        
+            @media screen and(min-width:780px) {
+                width: 780px;
+            }
+        
+            @media screen and (min-width:1200px) {
+                width: 1200px;
+            }
 }
 
 .company__list {
     margin-top: 60px;
     list-style: none;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     padding-left: 0;
     padding: 0;
     margin: 0;
 }
-
-.company__item+.company__item {
-    margin-left: 30px;
-}
-
 .company__item {
     width: 170px;
     height: 92px;
+    @media screen and(min-width:780px) {
+            width: calc((100% - 6 * 15px)/3);
+            margin: 15px;
+        }
+    
+        @media screen and(min-width:1200px) {
+            width: calc((100% - 12*15px)/6);
+            margin: 15px;
+        }
 }
 
 .company__clients {
