--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -18,17 +18,35 @@
 }
 
 .section-features .container {
-    width: 1200px;
+    width: 480px;
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
+    @media screen and(min-width:480px) {
+            width: 480px;
+        }
+    
+        @media screen and(min-width:780px) {
+            width: 780px;
+        }
+    
+        @media screen and (min-width:1200px) {
+            width: 1200px;
+        }
 }
-
+   
 .features__list {
     list-style: none;
-    display: flex;
     padding-left: 0;
+    @media screen and(min-width:780px) {
+            display: flex;
+            flex-wrap: wrap;
+        }
+                 
+                 @media screen and(min-width:1200px) {
+                     display: flex;
+                      }
 }
 
 .features__list__item::before {
@@ -39,6 +57,16 @@
     background-repeat: no-repeat;
     background-position: center;
     background-color: rgba(245, 244, 250, 1);
+}
+.features__list__item{
+    margin-left: 0;
+    @media screen and(min-width:780px) {
+          width: calc((100% - 4 * 15px)/2);
+          margin: 15px;
+        }
+                @media screen and(min-width:1200px) {
+                    width: calc((100% - 8*15px)/4);
+                }
 }
 
 .features__list__item:nth-child(1)::before {
@@ -57,10 +85,6 @@
     background-image: url(../images/astronaut.svg);
 }
 
-.features__list__item+.features__list__item {
-    margin-left: 30px;
-}
-
 .features__list__title {
     color: $titleColor;
     font-weight: 700;
@@ -69,6 +93,9 @@
     text-transform: uppercase;
     margin-bottom: 10px;
     margin-top: 0;
+    @media screen and(max-width:779px){
+        text-align: center;
+    }
 }
 
 .features__list__title__explanation {
@@ -76,11 +103,4 @@
     margin-top: 0;
     margin-bottom: 0;
     line-height: 1.71;
-}
-
-.features__list {
-    max-width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
-    display: flex;
 }
