--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,3 +1,21 @@
+.hero__container{
+    text-align: center;
+    margin: 0 auto;
+
+    @media screen and(min-width:480px) {
+            width: 480px;
+            
+            
+        }
+    
+        @media screen and(min-width:780px) {
+            width: 780px;
+        }
+    
+        @media screen and (min-width:1200px) {
+            width: 1200px;
+        }
+}
 .hero {
     text-align: center;
     background-color: $bgColor;
@@ -13,20 +31,65 @@
     background-image: linear-gradient(to right,
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)),
-        url(../images/img-people.jpg);
+        url(../images/header-mobile1x.jpg);
+@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
+screen and (min-resolution: 192dpi) and (max-width: 767px),
+screen and (min-resolution: 2dppx) and (max-width: 767px) {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url(../images/header-mobile2x.jpg);
 }
 
+@media screen and (min-width: 768px) {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url(../images/header-tablet1x.jpg);
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
+screen and (min-resolution: 192dpi) and (min-width: 768px),
+screen and (min-resolution: 2dppx) and (min-width: 768px) {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url(../images/header-tablet2x.jpg);
+}
+
+@media screen and (min-width: 1200px) {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url(../images/img-people.jpg);
+    max-width: 1600px;
+    padding-top: 200px;
+    padding-bottom: 200px;
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
+screen and (min-resolution: 192dpi) and (min-width: 1200px),
+screen and (min-resolution: 2dppx) and (min-width: 1200px) {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url(../images/header-desktop2x.jpg);
+}
+}
 .hero__title {
     color: $heroColor;
+    text-align: center;
     margin-top: 0;
-    width: 696px;
-    margin-bottom: 30px;
+    max-width: 360px;
+    font-style: normal;
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
+    font-size: 26px;
+    line-height: 42px;
     letter-spacing: 0.06em;
     margin-right: auto;
     margin-left: auto;
+    @media screen and (min-width: 780px) {
+    font-size: 26px;
+        line-height: 42px;
+        text-align: center;
+        letter-spacing: 0.06em;
+    }
+    @media screen and (min-width: 1200px) {
+            max-width: 696px;
+            height: 120px;
+            font-size: 44px;
+            line-height: 1.36;
+        }
 }
 
 .hero__button {
