--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -2,22 +2,48 @@
     background-color: $bgColor;
     padding-top: 60px;
     padding-bottom: 60px;
-    display: flex;
+    // display: flex;
 }
 
 .adress .container {
-    width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    align-items: baseline;
-}
+  @include container();
+    @media screen and(max-width: 767px) {
+            text-align: center;
+        }
 
+                        @media screen and (min-width: 768px) and (max-width: 1199px) {
+                            display: flex;
+                            flex-wrap: wrap;
+                            justify-content: center;
+                            align-items: baseline;
+                            column-gap: 165px;
+                            text-align: center;
+                            width: 768px;
+                        }
+            
+                        @media screen and (min-width: 1200px) {
+                            justify-content: space-between;
+                            flex-wrap: nowrap;
+                            gap: 0;
+                            display: flex;
+                        }
+                        
+    
+   
+  
+}
+.nav-footer{
+    display: block;
+    justify-content: flex-start;
+}
 .nav-footer__list {
     list-style: none;
     padding-left: 0;
+    @media screen and (min-width: 1200px) {
+            text-align: left;
+            margin-bottom: 0px;
+            margin-right: 70px;
+        }
 }
 
 .nav-footer__logo a {
@@ -29,7 +55,6 @@
 }
 
 .nav-footer__logo {
-    margin-bottom: 20px;
     display: block;
     color: $heroColor;
     text-decoration: none;
@@ -37,6 +62,9 @@
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
+        @media screen and (max-width: 1199px) {
+                margin-bottom: 20px;
+            }
 }
 
 .nav-footer__title a {
@@ -80,7 +108,11 @@
 }
 .join {
     display: block;
-    margin-left: 70px;
+        @media screen and (max-width:1199px) {
+                margin-top: 60px;
+            }
+                        
+
 }
 
 .join__title {
@@ -94,10 +126,17 @@
     text-transform: uppercase;
     margin: 0;
     margin-bottom: 20px;
+    @media screen and(max-width:779px){
+text-align: center;
+    }
 }
 
 .join .social-icons {
     margin: 0;
+    @media screen and(max-width:779px){
+        display: flex;
+        align-items: center;
+    }
 }
 
 .join .social-icons__icon {
@@ -119,7 +158,16 @@
     background-color: $accentColor;
 }
 .join__email {
-    margin-left: auto;
+    // margin-left: auto;
+    @media screen and (min-width:1200px) {
+            margin-left: 93px;
+        }
+    @media screen and (max-width:1199px){
+        justify-content: center;
+        align-items: center;
+        margin-left: 0;
+        margin-top: 60px;
+    }
 }
 
 .join__title {
@@ -133,18 +181,31 @@
     color: #ffffff;
     margin: 0;
     margin-bottom: 20px;
+    @media screen and (max-width:1199px){
+        display: block;
+        text-align: center;
+    }
 }
 
 .join__input {
-    width: 358px;
+    width: 100%;
     height: 50px;
+    display: block;
+    margin: 0 auto;
     background-color: rgba(47, 48, 58, 1);
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
-    padding-left: 0;
-    padding-left: 16px;
+    padding:13px 16px;
     color: $heroColor;
+    @media screen and (min-width:768px) {
+            width: 450px;
+        }
+                 @media screen and (min-width:1200px){
+                    display: inline-block;
+                   margin-right: 12px;
+                   width: 358px;
+                 }
 }
 
 .join__input::placeholder {
@@ -183,8 +244,31 @@
     background-repeat: no-repeat;
     background-position: 83.31% 50%;
     margin-left: 12px;
+    display: inline-flex;
+}
+.join__button{
+    
+    @media screen and (max-width:1199px){
+        margin-top: 20px;
+       
+    }
+       
 }
 
 .join__form {
-    display: inline-flex;
-}
+
+                @media screen and (min-width: 768px) {
+                    width: 450px;
+                    display: inline-block; 
+                    align-items: center; 
+                    justify-content: center;                
+                }
+        
+                @media screen and (min-width: 1200px) {
+                //    display: inline-flex;
+                    margin-bottom: 0;
+                    margin-right: 12px;
+                    width: 358px;
+                }
+                }
+  
