--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,10 @@
 @import 'node_modules/modern-normalize/modern-normalize.css';
 @import "./utils/variables";
+@import "./utils/mixins";
+@import "./base/common";
+@import "./base/reset";
 @import "./components/page-header";
+@import "./components/mobile";
 @import "./components/hero";
 @import "./components/modal";
 @import "./components/features";
@@ -11,10 +15,4 @@
 @import "./components/portfolio";
 @import "./components/page-footer";
 
-body {
-    background-color: $heroColor;
-    color: $primaryColor;
-    font-family: Roboto, sans-serif;
-    letter-spacing: 0.03em;
-    font-size: 14px;
-}
+
