--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -6,6 +6,7 @@
   $buttonColor: rgb(245, 244, 250);
   $borderColor: rgba(236, 236, 236, 1);
   $titleColor: rgb(33, 33, 33);
+  $timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 
 
