--- a/sass/components/_mobile.scss
+++ b/sass/components/_mobile.scss
@@ -69,7 +69,7 @@
 
         &:nth-child(1) {
             @include fontPreset(500, 34px, 40px, 0.02em);
-            color: $accentColor;
+            color: rgba(117, 117, 117, 1);
 
             @media screen and (max-width: 380px) {
                 font-size: 28px;
@@ -78,7 +78,7 @@
 
         &:nth-child(2) {
             @include fontPreset(500, 24px, 28px, 0.02em);
-            color:black;
+            color:rgba(117, 117, 117, 1);
 
             @media screen and (max-width: 380px) {
                 font-size: 24px;
@@ -100,7 +100,11 @@
 .mobile-socials {
     display: flex;
     flex-wrap: wrap;
+&__list{
+    display: inline-flex;
+    flex-wrap: wrap;
 
+}
     &__item:not(:last-child) {
         padding-right: 10px;
         margin-right: 10px;
@@ -155,7 +159,7 @@
 
     &:hover .burger__icon,
     &:focus .burger__icon {
-        fill: #212121;
+        fill: $accentColor;
     }
 
     @media screen and (min-width: 768px) {
