--- a/sass/components/_mobile.scss
+++ b/sass/components/_mobile.scss
@@ -1,175 +1,170 @@
-
 .mobile-menu {
-    @include transitionBack(opacity, visibility);
+  @include transitionBack(opacity, visibility);
 
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: $heroColor;
-    opacity: 0;
-    visibility: hidden;
-    z-index: 100;
-    pointer-events: none;
-    overflow-y: scroll;
-
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: $heroColor;
+  opacity: 0;
+  visibility: hidden;
+  z-index: 100;
+  pointer-events: none;
+  overflow-y: scroll;
 }
 
 .mobile-menu.is-open {
-    opacity: 1;
-    visibility: visible;
-    pointer-events: auto;
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
 }
 
 .menu-container {
-    @include container();
-    height: 100%;
-    position: relative;
-    padding-left: 40px;
-    padding-bottom: 48px;
-    padding-top: 48px;
+  @include container();
+  height: 100%;
+  position: relative;
+  padding-left: 40px;
+  padding-bottom: 48px;
+  padding-top: 48px;
 
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .mobile-nav {
-    &__item {
-        &:not(:last-child) {
-            margin-bottom: 36px;
-        }
+  &__item {
+    &:not(:last-child) {
+      margin-bottom: 36px;
+    }
+  }
+
+  &__link {
+    @include transitionBase();
+    @include fontPreset(500, 40px, 47px, 0.02em);
+
+    color: #212121;
+
+    &--current {
+      color: $accentColor;
     }
 
-    &__link {
-        @include transitionBase();
-        @include fontPreset(500, 40px, 47px, 0.02em);
-
-        color:  #212121;
-
-        &--current {
-            color: #212121;
-        }
-
-        &:hover,
-        &:focus {
-            color: $accentColor;
-        }
+    &:hover,
+    &:focus {
+      color: $accentColor;
     }
+  }
 }
 
 .mobile-contact {
-    &__list {
-        margin-top: auto;
-        margin-bottom: 64px;
+  &__list {
+    margin-top: 302px;
+    margin-bottom: 64px;
+  }
+
+  &__item {
+    @include fontPreset(500, 34px, 40px, 00.02em);
+
+    &:nth-child(1) {
+      @include fontPreset(500, 34px, 40px, 0.02em);
+      color: $accentColor;
+
+      @media screen and (max-width: 380px) {
+        font-size: 28px;
+      }
     }
 
-    &__item {
-        @include fontPreset(500, 34px, 40px, 00.02em);
+    &:nth-child(2) {
+      @include fontPreset(500, 24px, 28px, 0.02em);
+      color: rgba(117, 117, 117, 1);
 
-        &:nth-child(1) {
-            @include fontPreset(500, 34px, 40px, 0.02em);
-            color: rgba(117, 117, 117, 1);
-
-            @media screen and (max-width: 380px) {
-                font-size: 28px;
-            }
-        }
-
-        &:nth-child(2) {
-            @include fontPreset(500, 24px, 28px, 0.02em);
-            color:rgba(117, 117, 117, 1);
-
-            @media screen and (max-width: 380px) {
-                font-size: 24px;
-            }
-        }
-
-        &:not(:last-child) {
-            margin-bottom: 32px;
-        }
-
+      @media screen and (max-width: 380px) {
+        font-size: 24px;
+      }
     }
 
-    &__link {
-        @include transitionBase;
-        color: inherit;
+    &:not(:last-child) {
+      margin-bottom: 32px;
     }
+  }
+
+  &__link {
+    @include transitionBase;
+    color: inherit;
+  }
 }
 
 .mobile-socials {
-    display: flex;
-    flex-wrap: wrap;
-&__list{
+  display: flex;
+  flex-wrap: wrap;
+  &__list {
     display: inline-flex;
     flex-wrap: wrap;
+  }
+  &__item:not(:last-child) {
+    padding-right: 10px;
+    margin-right: 10px;
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+  }
 
-}
-    &__item:not(:last-child) {
-        padding-right: 10px;
-        margin-right: 10px;
-        border-right: 1px solid rgba(33, 33, 33, 0.2);
-    }
+  &__link {
+    display: inline-block;
+    @include fontPreset(500, 18px, 22px, 0.02em);
 
-    &__link {
-        display: inline-block;
-        @include fontPreset(500, 18px, 22px, 0.02em);
-
-        color: $accentColor;
-
-        @media screen and (min-width: 768px) {
-            display: none;
-        }
-    }
+    color: $accentColor;
 
     @media screen and (min-width: 768px) {
-        display: none;
+      display: none;
     }
+  }
+
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
 }
 .burger__btn {
-    background: transparent;
-    border: none;
-    padding: 0;
+  background: transparent;
+  border: none;
+  padding: 0;
 
-    &--opened {
-        @include centeredFlex();
-        top: 10px;
-        right: 15px;
-        position: absolute;
+  &--opened {
+    @include centeredFlex();
+    top: 10px;
+    right: 15px;
+    position: absolute;
+  }
 
-    }
+  &.is-open .burger__icon-opened {
+    display: none;
+  }
 
-    &.is-open .burger__icon-opened {
-        display: none;
-    }
+  &.is-open .burger__icon-crossed {
+    display: block;
+  }
 
-    &.is-open .burger__icon-crossed {
-        display: block;
-    }
+  &--closed {
+    @include centeredFlex();
+    position: absolute;
+    top: 10px;
+    right: 15px;
 
-    &--closed {
-        @include centeredFlex();
-        position: absolute;
-        top: 10px;
-        right: 15px;
+    height: 40px;
+    width: 40px;
+  }
 
-        height: 40px;
-        width: 40px;
-    }
+  &:hover .burger__icon,
+  &:focus .burger__icon {
+    fill: $accentColor;
+  }
 
-    &:hover .burger__icon,
-    &:focus .burger__icon {
-        fill: $accentColor;
-    }
-
-    @media screen and (min-width: 768px) {
-        display: none;
-    }
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
 }
 
 .burger__icon {
-    @include transitionBase(fill);
-    display: block;
-    width: 40px;
-    height: 40px;
+  @include transitionBase(fill);
+  display: block;
+  width: 40px;
+  height: 40px;
 }
