--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,208 +1,171 @@
 .main-nav__list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .main-nav__logo {
-    color: $titleColor;
-    text-decoration: none;
-    font-family: Raleway, sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    @media screen and(max-width:767px) {
-            padding-top: 16px;
-        }
-    
-    
+  color: $titleColor;
+  text-decoration: none;
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  @media screen and(max-width:767px) {
+    padding-top: 16px;
+  }
 }
 
-
 .main-nav__logo .colortext {
-    color: $accentColor;
+  color: $accentColor;
 }
 
 .main-nav__list {
-    display: flex;
-    margin-left: 93px;
-        @media screen and(max-width:767px) {
-                display: none;
-            }
+  display: flex;
+  margin-left: 93px;
+  @media screen and(max-width:767px) {
+    display: none;
+  }
 }
 
-.main-nav__list .list__item+.list__item {
-    margin-left: 50px;
+.main-nav__list .list__item + .list__item {
+  margin-left: 50px;
 }
 
 .main-nav__list a {
-    color: $titleColor;
-    text-decoration: none;
-    display: block;
-    padding-top: 32px;
-    padding-bottom: 32px;
-    font-weight: 500;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  color: $titleColor;
+  text-decoration: none;
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .main-nav__list .item__current-link {
-    position: relative;
+  position: relative;
 }
 
 .main-nav__list .item__current-link:after {
-    display: block;
-    content: "";
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    background-color: $accentColor;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    opacity: 1;
+  display: block;
+  content: "";
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: $accentColor;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  opacity: 1;
 }
 
 .main-nav__list .item__current-link {
-    color: $accentColor;
+  color: $accentColor;
 }
 
 .page-header {
-    border-bottom: 1px solid $borderColor;
+  border-bottom: 1px solid $borderColor;
 }
 
 .page-header .container {
- 
-    padding-left: 15px;
-    padding-right: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 
-    @media screen and(min-width:480px) {
-            width: 480px; 
-            height: 60px;  
-        }
-        @media screen and(min-width:768px) {
-            width: 768px;
-            height: 80px;
-        }
-                   @media screen and(min-width:1200px) {
-                       width: 1200px;
-                       height: 80px;
-                   }
+  @media screen and(min-width:480px) {
+    width: 480px;
+    height: 60px;
+  }
+  @media screen and(min-width:768px) {
+    width: 768px;
+    height: 80px;
+  }
+  @media screen and(min-width:1200px) {
+    width: 1200px;
+    height: 80px;
+  }
 }
 
 .main-nav__adress {
-    display: flex;
-    margin-left: auto;
-    justify-content: center;
-    list-style: none;
-    @media screen and(max-width:767px) {
-            display: none;
-        }   
-                 @media screen and (min-width:768px) and(max-width:1199px) {
-                   display: block;
-                 }
+  display: flex;
+  margin-left: auto;
+  justify-content: center;
+  list-style: none;
+  @media screen and(max-width:767px) {
+    display: none;
+  }
+  @media screen and (min-width: 768px) and(max-width:1199px) {
+    display: inline-flex;
+    flex-wrap: wrap;
+  }
 }
 .main-nav__adress .email__icon {
-    height: 12px;
-    width: 16px;
-    margin-right: 10px;
-    fill: currentColor;
+  height: 12px;
+  width: 16px;
+  margin-right: 10px;
+  fill: currentColor;
 }
 
 .main-nav__adress .phone__icon {
-    height: 16px;
-    width: 10px;
-    margin-right: 10px;
-    fill: currentColor;
+  height: 16px;
+  width: 10px;
+  margin-right: 10px;
+  fill: currentColor;
 }
 
-.main-nav__adress .adress__link+.adress__link {
-    margin-left: 50px;
+.main-nav__adress .adress__link + .adress__link {
+  margin-left: 50px;
 }
 
 .main-nav__adress a {
-    color: $primaryColor;
-    text-decoration: none;
-    font-weight: 500;
+  color: $primaryColor;
+  text-decoration: none;
+  font-weight: 500;
 
-    line-height: 1.14;
-    letter-spacing: 0.02em;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 
 .main-nav__list:hover,
 .main-nav__list:focus {
-    color: $accentColor;
+  color: $accentColor;
 }
 
-
 .adress__email {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .adress__phone {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .main-nav__adress .adress__email:hover,
 .main-nav__adress .adress__email:focus {
-    color: $accentColor;
+  color: $accentColor;
 }
 
 .main-nav__adress .adress__phone:hover,
 .main-nav__adress .adress__phone:focus {
-    color: $accentColor;
+  color: $accentColor;
 }
 
 .main-nav {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
-
-       
-// .main-nav__menu{
-//     width: 40px;
-//     height: 40px;
-// }
-// .main-nav__cross{
-// width: 40px;
-//  height: 40px;
-// }
-
-// .js-menu-container {
-//             min-width: 320px;
-//             max-width: 1170px;
-//             padding-left: 15px;
-//             padding-right: 15px;
-//             margin-left: auto;
-//             margin-right: auto;
-//         }
-
-//  @media screen and(min-width:768px) {
-//     .menu-toggle {
-//             display: none;
-//         }
-//                 .mobile-nav__list {
-//                     display: none;
-//                 }
-        
-//                 .mobile-nav__adress {
-//                     display: none;
-//                 }
-        
-//                 .mobile-socials__list {
-//                     display: none;
-//                 }
-//  }
